--- a/pkg/jonnystoten/PKGBUILD
+++ b/pkg/jonnystoten/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=jonnystoten-base
-pkgver=2018.08.18
+pkgver=2018.08.20
 pkgrel=1
 pkgdesc="Base system configuration for jonnystoten systems"
 arch=("any")
@@ -16,6 +16,7 @@ depends=(
     'file'
     'filesystem'
     'findutils'
+    'fish'
     'gawk'
     'gcc-libs'
     'gettext'
